syntax = "proto3";

package settings;

import "media.proto";
import "language.proto";
import "commons.proto";
import "tax.proto";

message Settings {
    uint32 id = 1;
    repeated Image logo = 2;
    repeated Image favicon = 3;
    string storeName = 4;
    string storeEmail = 5;
    string storeNumber = 6;
    string addressLine1 = 7;
    string addressLine2 = 8;
    repeated Currency currencies = 9;
    Currency defaultCurrency = 10;
    repeated Language locales = 11;
    GoogleAnalytics google = 12;
    uint32 maxCheckoutQuantity = 13;
    uint32 maxCheckoutAmount = 14;
    Seo seo = 15;
    required string alias = 16;
    required string storeId = 17;
    string templateId = 18;
    Tax tax = 19;
}

message ConfigRequest {
    required string alias = 1;
    optional string suid = 3;
}

message ConfigResponse {
    Settings config = 1;
}